# lipa-lightning-lib

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  LICENCE  Makefile  README.md  build.rs  generate_report.sh
.cargo/: config.toml.breez.sample  config.toml.ldk.sample  config.toml.sample
.github/: dependabot.yml
.github/workflows/: build.yml  code-analysis.yml  deploy-release.yml  e2e-tests.yml  e2e_tests.yml  integration-tests.yml  monitoring-tests.yml
.github/workflows/template/: deploy-release.yml
bindings/swift/: lipalightninglib.swift  lipalightninglibFFI.h  lipalightninglibFFI.modulemap
breez-sdk-mock/: Cargo.toml
breez-sdk-mock/src/: lib.rs
breez-sdk-wrapper/: Cargo.toml
breez-sdk-wrapper/src/: lib.rs  mock.rs
docs/: LifetimeModel.org  Sync.org  lightning_voucher.org
eel/: Cargo.toml  Makefile  build.rs
eel/examples/eel-node/: cli.rs  file_storage.rs  main.rs
eel/examples/node/: cli.rs  file_storage.rs  main.rs
eel/src/: async_runtime.rs  callbacks.rs  chain_access.rs  config.rs  confirm.rs  data_store.rs  encryption.rs  encryption_symmetric.rs  errors.rs  esplora_client.rs  event_handler.rs  fee_estimator.rs  flow.rs  interfaces.rs  invoice.rs  key_derivation.rs  keys_manager.rs  lib.rs  limits.rs  logger.rs  lsp.rs  migrations.rs  node_info.rs  p2p_networking.rs  payment.rs  payment_store.rs  random.rs  rapid_sync_client.rs  recovery.rs  rounding.rs  router.rs  schema_migration.rs  secret.rs  storage_persister.rs  task_manager.rs  tx_broadcaster.rs  types.rs  utils.rs  wallet.rs
eel/src/lsp_client/: mod.rs
eel/src/test_utils/: channels.rs
eel/tests/: chain_sync_test.rs  data_store_test.rs  node_info_test.rs  onchain_test.rs  p2p_connection_test.rs  payment_storage_test.rs  payment_store_test.rs  persistence_test.rs  rapid_gossip_sync_test.rs  receiving_payments_test.rs  sending_payments_test.rs  zero_conf_test.rs
eel/tests/config/: mod.rs
eel/tests/lsp_client/: mod.rs
eel/tests/mocked_remote_storage/: mod.rs
eel/tests/print_events_handler/: mod.rs
eel/tests/resources/monitors/: 739f39903ea426645bd6650c55a568653c4d3c275bcbda17befc468f64c76a58_1
eel/tests/resources/monitors/state_1/: 1c4eb9c1d721ae7616ee480a735d175818510326701695ad4163aa00c6a320dd_0  e22f85d8e341ba2f0e9d069e6e9585a062b817553f4738264e3019f174b95612_0
eel/tests/resources/monitors/state_2/: 1c4eb9c1d721ae7616ee480a735d175818510326701695ad4163aa00c6a320dd_0  e22f85d8e341ba2f0e9d069e6e9585a062b817553f4738264e3019f174b95612_0
eel/tests/resources/monitors/state_3/: aa7e2798a1cdca1e0700b2e5f07fe82002b6d084a9758553c8310b9f702ed61f_0
eel/tests/resources/payment_databases/: new_payment_schema_1.db3
eel/tests/resources/spendable_outputs/: spendable_output_coop_close_from_peer  spendable_output_force_close_from_peer
eel/tests/setup/: mocked_storage_setup.rs  mod.rs
eel/tests/setup_env/: mod.rs
examples/3l-node/: cli.rs  main.rs
examples/node/: .env.example  cli.rs  file_storage.rs  hex_utils.rs  hinter.rs  lsp_client.rs  main.rs  overview.rs
examples/notification_handler/: environment.rs  main.rs
lightningvoucher/: Cargo.toml
lightningvoucher/src/: errors.rs  key.rs  lib.rs  lnurl.rs  voucher.rs
lspd/: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  db-init.sh  docker-compose.yaml  docker-compose.yml  lnd.env  wait-for-cln.sh
lspd/db2/: Dockerfile
lspd/lnd-zero-conf/: Dockerfile  lncli  lnd.conf  start.sh  tls.cert  tls.key
lspd/lspd-cln/: Dockerfile  hsm_secret
mock/breez-sdk/: Cargo.toml
mock/breez-sdk/src/: lib.rs
mock/pocketclient/: Cargo.toml
mock/pocketclient/src/: lib.rs
mock/wild/chameleon/: Cargo.toml
mock/wild/chameleon/src/: lib.rs
mock/wild/crow/: Cargo.toml
mock/wild/crow/src/: lib.rs
mock/wild/honeybadger/: Cargo.toml
mock/wild/honeybadger/src/: lib.rs  secrets.rs
mock/wild/honeybadger/src/asynchronous/: mod.rs
mock/wild/parrot/: Cargo.toml
mock/wild/parrot/src/: lib.rs
mock/wild/pigeon/: Cargo.toml
mock/wild/squirrel/: Cargo.toml
mock/wild/squirrel/src/: lib.rs
parser/: Cargo.toml
parser/examples/demo/: main.rs
parser/src/: domain.rs  lib.rs  lightning_address.rs  phone_number.rs
pocket_client/: Cargo.toml
pocket_client/src/: lib.rs
pocketclient/: Cargo.toml
pocketclient/src/: lib.rs
rgs/: compose.yaml
rgs/cln/: hsm_secret
rgs/rgs-server/: Dockerfile  config.rs  nginx.conf
scripts/: generate-bindings.sh
src/: actions_required.rs  activities.rs  activity.rs  amount.rs  analytics.rs  async_runtime.rs  auth.rs  backend_client.rs  background_processor.rs  backup.rs  bitcoind_client.rs  broadcaster.rs  callbacks.rs  chain_access.rs  config.rs  confirm.rs  convert.rs  core_callback_impl.rs  data_store.rs  eel_interface_impl.rs  electrum_client.rs  encryption.rs  environment.rs  errors.rs  esplora_client.rs  esplora_client_api.rs  event.rs  event_handler.rs  exchange_rate_provider.rs  fee_estimator.rs  fiat_topup.rs  filter.rs  fund_migration.rs  hex_utils.rs  interfaces.rs  invoice.rs  invoice_details.rs  key_derivation.rs  keys_manager.rs  lib.rs  (+37 more)
src/example-3L-usage/: cli.rs
src/lightning/: bolt11.rs  lnurl.rs  mod.rs  receive_limits.rs
src/onchain/: channel_closes.rs  mod.rs  reverse_swap.rs  swap.rs  swaps.rs
src/test_utils/: channels.rs
tests/: chain_sync_test.rs  decode_test.rs  invoice_test.rs  monitoring_test.rs  node_info_test.rs  p2p_connection_test.rs  payment_fetching_test.rs  rapid_gossip_sync_test.rs  receive_onchain_test.rs  receiving_payment_test.rs  receiving_payments_test.rs  register_node_test.rs  remote_persistence_test.rs  sat_flows.rs  sending_payment_test.rs  sending_payments_test.rs  setup.rs  test_node_info.rs  test_p2p_connection.rs  topup_test.rs  zero_conf_test.rs
tests/lsp_client/: mod.rs
tests/print_events_handler/: mod.rs
tests/print_notifications_handler/: mod.rs
tests/setup/: mod.rs
tests/setup_3l/: mod.rs
util/storage-mock/: Cargo.toml
voucherserver/: Cargo.toml
voucherserver/src/: main.rs
voucherserver/templates/: base.html.tera  index.html.tera  macros.html.tera  voucher.html.tera
(+13 files in other folders)
