[workspace]
members = [
    "parser"
]

[package]
name = "lipalightninglib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "uniffi_lipalightninglib"

[dependencies]
parser = { path = "parser" }

chameleon = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }
crow = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }
graphql = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }
honey-badger = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }
parrot = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }
perro = { git = "https://github.com/getlipa/perro", tag = "v1.2.0" }
pigeon = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }
squirrel = { git = "https://github.com/getlipa/wild", tag = "v1.21.2" }

breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.0-rc2" }

aes-gcm = "0.10.3"
bip39 = "2.0.0"
bitcoin = "0.30.1"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
cipher = "0.4.4"
email_address = "0.2.4"
file-rotate = "0.7.5"
hex = "0.4.3"
iban_validate = "4.0.1"
log = "0.4.21"
num_enum = "0.7.2"
rand = "0.8.5"
regex = { version = "1.10.4" }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rusqlite_migration = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.12.2" }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "sync"] }
uniffi = "0.27.0"
uuid = { version = "1.8.0", features = ["v5"] }

# Bundle sqlite for all targets except iOS.
[target.'cfg(not(target_os = "ios"))'.dependencies]
rusqlite = { version = "0.29.0", features = [
    "backup",
    "bundled",
    "chrono",
    "hooks",
    "load_extension",
    "serde_json",
] }
[target.'cfg(target_os = "ios")'.dependencies]
rusqlite = { version = "0.29.0", features = [
    "backup",
    "chrono",
    "hooks",
    "load_extension",
    "serde_json",
] }


[dev-dependencies]
anyhow = "1"
colored = "2.1.0"
ctor = "0.2.8"
qrcode = { version = "0.14.0", default-features = false }
rustyline = { version = "14.0.0", features = ["derive"] }
serial_test = { version = "3.0.0", features = ["file_locks"] }
strip-ansi-escapes = "0.2.0"
thousands = "0.2.0"
lazy_static = "1.4.0"

[build-dependencies]
camino = "1.1.6"
uniffi_bindgen = "0.27.0"

# Use some of the binary size reduction strategies from https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
