[workspace]
members = [
    "mock/breez-sdk",
    "parser",
]

[package]
name = "lipalightninglib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "uniffi_lipalightninglib"

[dependencies]
parser = { path = "parser" }

chameleon = { git = "https://github.com/getlipa/wild", tag = "v1.29.0", optional = true }
chameleon-mock = { path = "mock/wild/chameleon", optional = true }
crow = { git = "https://github.com/getlipa/wild", tag = "v1.29.0", optional = true }
crow-mock = { path = "mock/wild/crow", optional = true }
graphql = { git = "https://github.com/getlipa/wild", tag = "v1.29.0" }
honeybadger = { git = "https://github.com/getlipa/wild", tag = "v1.29.0", optional = true }
honeybadger-mock = { path = "mock/wild/honeybadger", optional = true }
parrot = { git = "https://github.com/getlipa/wild", tag = "v1.29.0", optional = true }
parrot-mock = { path = "mock/wild/parrot", optional = true }
perro = { git = "https://github.com/getlipa/perro", tag = "v1.2.0" }
pigeon = { git = "https://github.com/getlipa/wild", tag = "v1.29.0", optional = true }
pigeon-mock = { path = "mock/wild/pigeon", optional = true }
squirrel = { git = "https://github.com/getlipa/wild", tag = "v1.29.0", optional = true }
squirrel-mock = { path = "mock/wild/squirrel", optional = true }

breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.6.6", optional = true }
breez-sdk-mock = { path = "mock/breez-sdk", optional = true }

aes-gcm = "0.10.3"
bip39 = "2.1.0"
bitcoin = "0.30.1"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
cipher = "0.4.4"
email_address = "0.2.9"
file-rotate = "0.7.6"
hex = "0.4.3"
iban_validate = "4.0.1"
log = "0.4.25"
num_enum = "0.7.3"
phonenumber = "0.3.6"
rand = "0.8.5"
regex = { version = "1.11.1" }
rusqlite_migration = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10.8", features = [] }
simplelog = { version = "0.12.2" }
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "sync"] }
uniffi = "0.28.3"
uuid = { version = "1.12.0", features = ["v5"] }

[features]
default = ["dep:breez-sdk-core", "dep:chameleon", "dep:crow", "dep:honeybadger", "dep:parrot", "dep:pigeon", "dep:squirrel"]
mock-deps = ["dep:breez-sdk-mock", "dep:chameleon-mock", "dep:crow-mock", "dep:honeybadger-mock", "dep:parrot-mock", "dep:pigeon-mock", "dep:squirrel-mock"]

# Bundle sqlite for all targets except iOS.
[target.'cfg(not(target_os = "ios"))'.dependencies]
rusqlite = { version = "0.29.0", features = [
    "backup",
    "bundled",
    "chrono",
    "hooks",
    "load_extension",
    "serde_json",
] }
[target.'cfg(target_os = "ios")'.dependencies]
rusqlite = { version = "0.29.0", features = [
    "backup",
    "chrono",
    "hooks",
    "load_extension",
    "serde_json",
] }


[dev-dependencies]
anyhow = "1"
colored = "2.2.0"
ctor = "0.2.9"
qrcode = { version = "0.14.1", default-features = false }
rustyline = { version = "15.0.0", features = ["derive"] }
serial_test = { version = "3.2.0", features = ["file_locks"] }
strip-ansi-escapes = "0.2.1"
thousands = "0.2.0"
lazy_static = "1.5.0"

[build-dependencies]
camino = "1.1.9"
uniffi_bindgen = "0.28.0"

# Use some of the binary size reduction strategies from https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
