[package]
name = "eel"
version = "0.1.0"
edition = "2021"

[features]
nigiri = []

[dependencies]
aes = "0.8.1"
aes-gcm = "0.10.2"
bip39 = "2"
bitcoin = "0.29.2"
chrono = { version = "0.4.23", default-features = false }
cipher = { version = "0.4.3", features = ["block-padding", "alloc"] }
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
esplora-client = { version = "0.5.0", default-features = false, features = ["blocking"] }
futures = "0.3.24"
lightning = { version = "0.0.115", features = ["max_level_trace"] }
lightning-background-processor = "0.0.115"
lightning-invoice = "0.23.0"
lightning-net-tokio = "0.0.115"
lightning-persister = "0.0.115"
lightning-rapid-gossip-sync = "0.0.115"
lightning-transaction-sync = { version = "0.0.115", features = ["esplora-async"] }
log = "0.4.17"
num_enum = "0.6.1"
prost = "0.11.9"
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
# Explicitly depend on secp256k1 for secp256k1::SECP256K1.
secp256k1 = { version = "0.24.3", features = ["global-context"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "time", "sync"] }
tonic = "0.9.2"
bdk = { version = "0.28.0", default-features = false, features = ["std", "keys-bip39", "key-value-db", "use-esplora-blocking"]}
sled = "0.34.7"

perro = { git = "https://github.com/getlipa/perro", tag = "v1.0.1" }

[dev-dependencies]
colored = "2.0.0"
ctor = "0.2.0"
rustyline = "11.0.0"
serde_json = "1.0"
serial_test = { version =  "2.0.0", features = ["file_locks"] }
simplelog = { version = "0.12.0", features = ["test"] }
strip-ansi-escapes = "0.1.1"

storage-mock = { path = "../util/storage-mock" }

[build-dependencies]
tonic-build = "0.9.2"
