[package]
name = "eel"
version = "0.1.0"
edition = "2021"

[features]
nigiri = []

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
bip39 = "2"
bitcoin = "0.29"
chrono = { version = "0.4", default-features = false }
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
esplora-client = { version = "0.5", default-features = false, features = ["blocking"] }
futures = "0.3"
lightning = { version = "0.0.115", features = ["max_level_trace"] }
lightning-background-processor = "0.0.115"
lightning-invoice = "0.23.0"
lightning-net-tokio = "0.0.115"
lightning-persister = "0.0.115"
lightning-rapid-gossip-sync = "0.0.115"
lightning-transaction-sync = { version = "0.0.115", features = ["esplora-async"] }
log = "0.4"
num_enum = "0.6"
prost = "0.11"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
# Explicitly depend on secp256k1 for secp256k1::SECP256K1.
secp256k1 = { version = "0.24", features = ["global-context"] }
thiserror = "1.0"
tokio = { version = "1.29", features = ["rt-multi-thread", "time", "sync"] }
tonic = "0.9"

perro = { git = "https://github.com/getlipa/perro", tag = "v1.0.1" }

[dev-dependencies]
colored = "2"
ctor = "0.2"
rustyline = "12"
serde_json = "1"
serial_test = { version =  "2", features = ["file_locks"] }
simplelog = { version = "0.12", features = ["test"] }
strip-ansi-escapes = "0.1"

storage-mock = { path = "../util/storage-mock" }

[build-dependencies]
tonic-build = "0.9"
