[package]
name = "eel"
version = "0.1.0"
edition = "2021"

[features]
nigiri = []

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.2"
bip39 = "2"
bitcoin = "0.29.2"
chrono = { version = "0.4.26", default-features = false }
cipher = { version = "0.4.3", features = ["block-padding", "alloc"] }
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
esplora-client = { version = "0.5.0", default-features = false, features = ["blocking"] }
futures = "0.3.24"
lightning = { version = "0.0.116", features = ["max_level_trace"] }
lightning-background-processor = "0.0.116"
lightning-invoice = "0.24.0"
lightning-net-tokio = "0.0.116"
lightning-persister = "0.0.116"
lightning-rapid-gossip-sync = "0.0.116"
lightning-transaction-sync = { version = "0.0.116", features = ["esplora-async"] }
lnurl-rs = { version = "0.2.6", default-features = false, features = ["blocking" ] }
log = "0.4.19"
num_enum = "0.7.0"
prost = "0.11.9"
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
# Explicitly depend on secp256k1 for secp256k1::SECP256K1.
secp256k1 = { version = "0.24.3", features = ["global-context"] }
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["rt-multi-thread", "time", "sync"] }
tonic = "0.9.2"

perro = { git = "https://github.com/getlipa/perro", tag = "v1.1.0" }

# Bundle sqlite for all targets except iOS.
[target.'cfg(not(target_os = "ios"))'.dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
[target.'cfg(target_os = "ios")'.dependencies]
rusqlite = { version = "0.29.0", features = ["chrono"] }

[dev-dependencies]
colored = "2.0.4"
ctor = "0.2.4"
rustyline = "12.0.0"
serde_json = "1.0"
serial_test = { version =  "2.0.0", features = ["file_locks"] }
simplelog = { version = "0.12.0", features = ["test"] }
strip-ansi-escapes = "0.2.0"

storage-mock = { path = "../util/storage-mock" }

[build-dependencies]
tonic-build = "0.9.2"
