[package]
name = "lightningvoucher"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["rand_core"] }
bech32 = "0.11"
cipher = "0.4"
data-encoding = "2"
generic-array = "0.14"
rand = "0.8"
secp256k1 = { version = "0.27.0", features = ["rand", "global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
