[package]
name = "lightningvoucher"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["rand_core"] }
bech32 = "0.11"
breez-sdk-core = { git = "https://github.com/breez/breez-sdk", version = "0.4.1", optional = true }
cipher = "0.4"
data-encoding = "2"
ecies = { version = "0.2", default-features = false, features = ["pure"] }
generic-array = "0.14"
rand = "0.8"
secp256k1 = { version = "0.27", features = ["rand", "global-context", "bitcoin-hashes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["breez"]
breez = ["dep:breez-sdk-core"]
