[package]
name = "pocketclient"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
log = "0.4.22"
perro = { git = "https://github.com/getlipa/perro", tag = "v1.2.0" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
