[package]
name = "crow-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "crow"

[dependencies]
crow = { git = "https://github.com/getlipa/wild", tag = "v1.21.3" }
graphql = { git = "https://github.com/getlipa/wild", tag = "v1.21.3" }
honeybadger-mock = { path = "../honeybadger" }
isocountry = { version = "0.3.2" }
isolanguage-1 = { version = "0.2.2" }
lazy_static = "1.4.0"
