[package]
name = "honeybadger-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "honeybadger"

[dependencies]
graphql = { git = "https://github.com/getlipa/wild", tag = "v1.26.0" }
honeybadger = { git = "https://github.com/getlipa/wild", tag = "v1.26.0" }
rand = "0.8.5"
secp256k1 = { version = "0.27.0", features = ["global-context"] }
tokio = "1.37.0"
log = "0.4.21"
