[package]
name = "parrot-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "parrot"

[dependencies]
graphql = { git = "https://github.com/getlipa/wild", tag = "v1.21.1" }
honey-badger = { git = "https://github.com/getlipa/wild", tag = "v1.21.1" }
parrot = { git = "https://github.com/getlipa/wild", tag = "v1.21.1" }
