[package]
name = "squirrel-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "squirrel"

[dependencies]
graphql = { git = "https://github.com/getlipa/wild", tag = "v1.21.3" }
honeybadger = { git = "https://github.com/getlipa/wild", tag = "v1.21.3" }
squirrel = { git = "https://github.com/getlipa/wild", tag = "v1.21.3" }
